--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 1200px) {
-    /* lg 1200px */
+    /* xl 1200px */
     .left-search {
         margin-left: 45px;
     }
