--- a/src/component/LiveLayout.css
+++ b/src/component/LiveLayout.css
@@ -8,3 +8,10 @@
     padding-bottom: 5px;
     padding-right: 10px;
 }
+
+@media screen and (max-width: 992px) {
+    /* xl 992px */
+    .logo {
+        display: none;
+    }
+}
