--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ li.ant-list-item{
     background: #fff;
 }
 
+/* https://github.com/woopen/nplayer/issues/502 */
 @media (any-hover: hover) {
     .nplayer_control:hover {
         cursor: default !important;
