--- a/src/component/Logo.css
+++ b/src/component/Logo.css
@@ -6,7 +6,7 @@
     filter: invert(100%);
     font-weight: bold;
     font-size: x-large;
-    display:table;
+    display: table;
 }
 
 .logo img {
@@ -19,4 +19,10 @@
     margin-top: 20px;
     display: table-cell;
     vertical-align: middle;
+}
+
+a:link, a:visited, a:hover, a:active {
+    color: inherit;
+    /*color: rgba(0, 0, 0, 0.85);*/
+    text-decoration: none;
 }
